ingress-controller.yaml
#ingress-controller
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
   name: ingress-controller
   annotations:
     kubernetes.io/ingress.class: "gce" #use "nginx" if using nginx ingress controller
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/" 
        backend:
          service: 
            name: deploy-ingress-blue #it should match name of service which is created before
            port:
              number: 80
